@@ -3,6 +3,8 @@
 Changelog for the Media: YouTube module.
 ========================================
 
+by aaron: Begin work on adding 'All/My Youtubes' vertical tabs.
+by aaron: Add 'YouTube Library' tab to browser w/ all youtube videos.
 by aaron: Allow parsing of url's like youtube.com/watch#v=...
 by aaron: Fix incorrect parse to youtube from flickr.
 by aaron: Implement hook_media_parse().
